<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtName"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_name_top_margin"
            android:textSize="@dimen/profile_title_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Имя" />

        <TextView
            android:id="@+id/txtEmail"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_txt_email_top_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            tools:text="name@gmail.com" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAvatar"
            android:layout_width="@dimen/profile_avtar_size"
            android:layout_height="@dimen/profile_avtar_size"
            android:layout_marginTop="@dimen/profile_avatar_top_margin"
            android:layout_marginEnd="@dimen/start_margin"
            app:cardCornerRadius="@dimen/profile_avatar_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sample_avatar" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtInterests"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_txt_header_interesting_top_margin"
            android:text="@string/profile_txt_interests"
            android:textSize="@dimen/profile_header_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInterests"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/start_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInterests" />

        <TextView
            android:id="@+id/txtPersonalData"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_personal_data_top_margin"
            android:text="@string/profile_personal_data"
            android:textSize="@dimen/profile_header_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvInterests" />

        <TextView
            android:id="@+id/txtHintName"
            style="@style/PaleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_hint_name_top_margin"
            android:text="@string/profile_txt_hint_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPersonalData" />

        <EditText
            android:id="@+id/editTxtName"
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/start_margin"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/profile_standard_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHintName"
            tools:text="Константин" />

        <EditText
            android:id="@+id/editTxtPass"
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/start_margin"
            android:hint="@string/profile_hint_pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="@dimen/profile_standard_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtName"
            tools:text="**************" />

        <EditText
            android:id="@+id/editTxtEmail"
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/start_margin"
            android:hint="@string/profile_hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/profile_standard_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPass"
            tools:text="name@gmail.com" />

        <EditText
            android:id="@+id/editTxtPhone"
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/start_margin"
            android:hint="@string/profile_hint_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textSize="@dimen/profile_standard_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

        <TextView
            android:id="@+id/txtSettings"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_header_settings_top_margin"
            android:text="@string/profile_header_settings"
            android:textSize="@dimen/profile_header_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPhone" />

        <Button
            android:id="@+id/btnNotifications"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_btn_notifications"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSettings" />

        <Button
            android:id="@+id/btnPrivacyPolicy"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_privacy_policy"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNotifications" />

        <Button
            android:id="@+id/btnTheme"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_btn_theme"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPrivacyPolicy" />

        <Button
            android:id="@+id/btnLanguage"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_btn_language"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTheme" />

        <Button
            android:id="@+id/btnDataAndMemory"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_btn_data_and_memory"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLanguage" />

        <TextView
            android:id="@+id/txtApp"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_header_app_top_margin"
            android:text="@string/profile_header_app"
            android:textSize="@dimen/profile_header_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDataAndMemory" />

        <Button
            android:id="@+id/btnQuestion"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_btn_question"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApp" />

        <Button
            android:id="@+id/btnProblem"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_btn_settings"
            android:gravity="start|center_vertical"
            android:text="@string/profile_btn_problem"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnQuestion" />

        <Button
            android:id="@+id/btnExit"
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="@dimen/profile_btn_exit_height"
            android:layout_marginHorizontal="@dimen/start_margin"
            android:layout_marginTop="@dimen/profile_btn_exit_top_margin"
            android:layout_marginBottom="@dimen/profile_btn_exit_bottom_margin"
            android:background="@drawable/shape_btn_exit"
            android:text="@string/profile_btn_exit"
            android:textAllCaps="false"
            android:textSize="@dimen/profile_header_txt_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnProblem" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>