<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_details_movie_img_height"
        app:cardCornerRadius="@dimen/movie_details_movie_img_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/moveImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/test_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/movie_details_bottom_sheet_dialog_margin_top"
        android:background="@drawable/shape_bottom_sheet_dialog"
        android:elevation="@dimen/movie_details_bottom_sheet_dialog_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/BaseText"
                android:layout_width="@dimen/movie_details_rating"
                android:layout_height="@dimen/movie_details_rating"
                android:layout_marginTop="@dimen/movie_details_rating_top_margin"
                android:layout_marginEnd="@dimen/start_margin"
                android:background="@drawable/shape_txt_age_limit"
                android:gravity="center"
                android:text="@string/movie_details_txt_rating"
                android:textSize="@dimen/normal_txt_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDate"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_details_data_start_margin"
                android:text="@string/movie_details_txt_data"
                android:textSize="@dimen/small_txt_size"
                app:layout_constraintBottom_toBottomOf="@+id/txtGenre"
                app:layout_constraintStart_toEndOf="@+id/txtGenre"
                app:layout_constraintTop_toTopOf="@+id/txtGenre" />

            <TextView
                android:id="@+id/txtGenre"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/movie_details_genre_top_margin"
                android:layout_marginBottom="@dimen/movie_details_genre_bottom_margin"
                android:background="@drawable/shape_txt_genre"
                android:text="@string/movie_details_genre"
                android:textSize="@dimen/very_small_txt_size"
                app:layout_constraintBottom_toTopOf="@+id/txtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtTitle"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginBottom="@dimen/movie_details_title_bottom_margin"
                android:text="@string/movie_details_title_of_move"
                android:textSize="@dimen/movie_details_title_txt_size"
                app:layout_constraintBottom_toTopOf="@+id/star1"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginBottom="@dimen/movie_details_star_bottom_margin"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintBottom_toBottomOf="@+id/star1"
                app:layout_constraintStart_toEndOf="@+id/star1"
                app:layout_constraintTop_toTopOf="@+id/star1" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintBottom_toBottomOf="@+id/star2"
                app:layout_constraintStart_toEndOf="@+id/star2"
                app:layout_constraintTop_toTopOf="@+id/star2" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintBottom_toBottomOf="@+id/star3"
                app:layout_constraintStart_toEndOf="@+id/star3"
                app:layout_constraintTop_toTopOf="@+id/star3" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_unfilled"
                app:layout_constraintBottom_toBottomOf="@+id/star4"
                app:layout_constraintStart_toEndOf="@+id/star4"
                app:layout_constraintTop_toTopOf="@+id/star4" />


            <TextView
                android:id="@+id/description"
                style="@style/BaseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/start_margin"
                android:layout_marginBottom="@dimen/movie_details_description_bottom_margin"
                android:text="@string/movie_details_description"
                android:textSize="@dimen/movie_details_description_txt_size"
                app:layout_constraintBottom_toTopOf="@+id/txtActors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />

            <TextView
                android:id="@+id/txtActors"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:text="@string/movie_details_txt_actors"
                android:textSize="@dimen/movie_details_txt_actor_text_size"
                app:layout_constraintBottom_toTopOf="@+id/rvActors"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActors"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_details_rv_actors_height"
                android:layout_marginBottom="@dimen/movie_details_rx_actors_bottom_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>